--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #7e679b;
+            background-color: #98c379;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(45deg, #b89fc9 50%, #ffffff 50%);
+            background: linear-gradient(45deg, #b8dba9 50%, #ffffff 50%);
             position: relative;
             overflow: hidden;
         }
